Added default image styles

--- a/css/screen.css
+++ b/css/screen.css
@@ -28,3 +28,14 @@ html {
   background: #E85E00 color: white;
   text-shadow: none;
 }
+
+/*
+    Elements: Images
+    ---
+    Default markup for images to make them responsive
+*/
+
+img {
+  max-width: 100%;
+  vertical-align: top;
+}
